  * Set all Interactions classes to private
  * Allow device names to use a default id if one is not specified
  * Deprecate default mouse and keyboard values in constructor, favoring devices parameter
  * Add support for pointer event properties
  * Implement scroll wheel support
  * Deprecate ordered pair parameters for pause method in favor of keywords

4.1.0 (2021-11-22)
=========================

DevTools:
  * Released selenium-devtools 0.95.0 (supports CDP v85, v93, v94, v95)
  * Released selenium-devtools 0.96.0 (supports CDP v85, v94, v95, v96)
  * Added support for secure websockets (#10017)

Ruby:
  * Execute Script supports ShadowRoots (#10019)
  * Fixed bug preventing zipping temp files on Windows (#9987)
  * Sang Pumpkin Carol (thanks Jari!)

4.0.3 (2021-10-20)
=========================

Firefox:
  * Fixed bug avoiding camel casing prefs (#9944 thanks @glaszig)

Ruby:
  * Fixed bug in Select class for finding by index (#9945)

Remote:
  * Fixed bug preventing sending keys with an empty value

4.0.2 (2021-10-19)
=========================

Server:
  * Fixed bug in new download code.

4.0.1 (2021-10-19)
=========================

Server:
  * Fixed download by pointing to new storage location.
    - Only supports Selenium 4 versions
  * Added default value for Server::get and Server::download to use the latest server version

4.0.0 (2021-10-13)
=========================

Ruby:
  * Updated minimum required Ruby version to 2.6
  * Updated minimum required rexml gem version due to vulnerability

Chrome:
  * Added default values for Network Conditions so no longer need to specify everything

Firefox:
  * Fixed bug where Firefox prefs were converting snake case to camel case

4.0.0.rc3 (2021-10-08)
=========================

Ruby:
  * Added support for getting timeout values from the driver

4.0.0.rc2 (2021-09-30)
=========================

DevTools:
  * Released selenium-devtools 0.93.0 (2021-09-01)
    - adds CDP version 93
    - removes CDP version 91